[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
solana-sdk = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"
ed25519-dalek = { version = "1.0", features = ["serde"] }
base58 = "0.2.0"
base64 = "0.21.0"
anyhow = "1.0.0"
rand = "0.7"
